[tool.poetry]
name = "sdss-lvmcam"
version = "0.4.14"
description = "The package for lvmcam"
authors = ["Florian Briegel <briegel@mpia.de>"]
maintainers = ["Florian Briegel <briegel@mpia.de>", "José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/lvmcam"
repository = "https://github.com/sdss/lvmcam"
documentation = "https://sdss-lvmcam.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "lvmcam", from = "python" }
]
include = ["python/lvmcam/etc/*"]

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.scripts]
lvmcam = "lvmcam.__main__:lvmcam"

[tool.poetry.dependencies]
python = ">=3.8,<4"
sdss-basecam = "^0.8.0"
sdss-araviscam = "^0.2.4"
sdss-lvmtipo = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ipython = [
    {version = ">=8.0.0", python = ">=3.9,<3.10"},
    {version = "^8.17.2", python = ">=3.10"}
]
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = ">=3.3.1"
Sphinx = ">=4.0.0"
furo = ">=2021.9.22"
sphinx-copybutton = ">=0.4.0"
sphinx-click = ">=3.0.1"
myst-parser = ">=2.0.0"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = "^1.23.2"
sphinx-jsonschema = ">=1.19.1"
ruff = ">=0.5.2"

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["ifoo"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "araviscam", "clu", "lvmtipo", "basecam"]

[tool.pytest.ini_options]
addopts = "--cov lvmcam --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["python/lvmcam/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
