[project]
name = "sdss-lvmcam"
version = "1.1.2"
description = "The package for lvmcam"
authors = [
    { name = "Florian Briegel", email = "briegel@mpia.de" },
    { name = "Richard J. Mathar", email = "mathar@mpia.de" }
]
maintainers = [
    { name = "Florian Briegel", email = "briegel@mpia.de" },
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = "BSD-3-Clause"
readme = "README.md"

requires-python = ">=3.10,<4"

dependencies = [
    "sdss-basecam>=0.8.2",
    "sdss-lvmtipo>=0.2.0",
    "pygobject==3.50.0"
]

[project.urls]
Homepage = "https://github.com/sdss/lvmcam"
Repository = "https://github.com/sdss/lvmcam"
Documentation = "https://sdss-lvmcam.readthedocs.org"

[project.scripts]
lvmcam = "lvmcam.__main__:lvmcam"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "Sphinx>=4.0.0",
    "furo>=2021.9.22",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "myst-parser>=2.0.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.23.2",
    "sphinx-jsonschema>=1.19.1",
    "ruff>=0.5.2",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["ifoo"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "araviscam", "clu", "lvmtipo", "basecam"]

[tool.pytest.ini_options]
addopts = "--cov lvmcam --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["python/lvmcam/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["python/lvmcam"]

[tool.hatch.build.targets.wheel]
packages = ["python/lvmcam"]
