[tool.poetry]
name = "sdss-araviscam"
version = "0.0.8"
description = "Blackfly S GigE camera reader for SDSS-V/LVM"
authors = ["Richard J. Mathar <mathar@mpia-hd.mpg.de>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["SDSS-V","LVM","MPIA"]
packages = [
	{ include = "araviscam" },
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Topic :: Multimedia :: Video :: Capture",
	"Topic :: Scientific/Engineering :: Astronomy",
]
homepage = "https://wiki.sdss.org"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
